# experience-app

./: .env.example  .gitignore  README.md  dev.sh
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/routes/: experience.py  gpx.py  health.py  samples.py
backend/app/cache/: base.py  file_cache.py
backend/app/core/: config.py  logging.py  mock_mode.py
backend/app/jobs/: experience_job.py  job_store.py  metrics.py  sqlite_job_store.py
backend/app/models/: experience.py  intent.py  media.py  place.py
backend/app/pipeline/: experience_composer.py  intent_parser.py  media_resolution.py  narrator.py  place_discovery.py  region_discovery.py  wikipedia_enrichment.py
backend/app/providers/: base.py  mapillary.py  nominatim.py  ollama_narrator.py  osm.py  wikidata.py  wikimedia.py  wikipedia.py
backend/app/scoring/: scorer.py
backend/tests/: test_intent_parser.py  test_metrics.py  test_narrator.py  test_scorer.py  test_smoke_fixtures.py
backend/tests/fixtures/: smoke_cases.yaml
backend/tests/integration/: conftest.py  test_e2e_pipeline.py
backend/tests/unit/: test_narrator_integration.py  test_ollama_narrator.py  test_route_coherence.py  test_wikidata_provider.py
data/regions/: region_registry.yaml
data/samples/: mapillary_sample.json  nominatim_silesia.json  overpass_silesia_abandoned.json  (+2 more)
docs/: architecture.md  backlog.md  data-sources.md  failure-modes.md  implementation-plan.md  prompts.md  regions.md  scoring.md  test-regions.md  vision.md
frontend/: README.md  experience.html  index.html
scripts/: generate_samples.py
(+13 files in other folders)
